Using css grid instead of bootstrap grid layout in el-centre.html

--- a/el-centre.html
+++ b/el-centre.html
@@ -23,17 +23,17 @@
             <i class="fa fa-bars"></i>
           </button>
           <div class="collapse navbar-collapse width-70 bg-cms text-left stripe" id="main-nav-responsive">
-            <ul class="navbar-nav ml-auto mr-md-0 mr-lg-4 mt-lg-4">
-              <li class="hli">
+            <ul class="navbar-nav ml-auto mr-md-auto mr-lg-4 mt-lg-4 main-nav-ul">
+              <li class="main-nav-li">
                 <a href="el-centre.html" class="mr-1">El centre</a>
               </li>
-              <li class="hli">
+              <li class="main-nav-li">
                 <a href="#" class="mr-1">Filosofia</a>
               </li>
-              <li class="hli">
+              <li class="main-nav-li">
                 <a href="#" class="mr-1">Noticies</a>
               </li>
-              <li class="hli">
+              <li class="main-nav-li">
                 <a href="https://centremedicsabadell.net/centremedic" class="mr-1">Area de Gestió</a>
               </li>
             </ul>
@@ -88,38 +88,26 @@
       <div class="collapse" data-is-loaded="false" id="especialitats"></div>
       <div class="p-3" id="body-container">
         <div class="container">
-          <div class="row row-el-centre" id="first-row">
-            <div class="col">
-              <div class="row">
-                <div class="col">
-                  <span class="title">QUI SOM?</span>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col text text-justify">
-                  <p>CMS es una clínica d’especialitats mèdiques ubicada al Cor de la Ciutat de Sabadell. CMS està dirigit per personal de Sabadell i de la seva àrea d’influència. La nostra vocació és la medicina i pretenem aportar un valor afegit, atenció i un sentit a la medicina privada que cada cop és més global i menys personalitzada.</p>
-                  <p>CMS té més de 30 anys d’experiència dedicats exclusivament a l’assistència sanitària privada. Això ens permet assolir l’objectiu d’aquest projecte, atendre de forma integral als nostres pacients amb excel·lents professionals i especialistes.</p>
-                  <p>La nostra filosofia no és només cobrir totes les especialitats mèdiques sinó donar-li un sentit de treball en equip, integració multidisciplinar i atenció que permeti tenir un control absolut sobre la salut i el benestar dels nostres pacients. Poder atendre, acompanyar dones i homes en totes les etapes de la seva vida desde la infantesa, l’adolescència, la edat adulta fins a la vellesa és en si un motiu de responsabilitat que ens enorgulleix. Aquest és el sentit de CMS, el tractament i benestar dels nostres pacients.</p>
-                </div>
-              </div>
+          <div class="my-250">
+            <div class="section-title">
+              QUI SOM?
+            </div>
+            <div class="section-text">
+              <p>CMS es una clínica d’especialitats mèdiques ubicada al Cor de la Ciutat de Sabadell. CMS està dirigit per personal de Sabadell i de la seva àrea d’influència. La nostra vocació és la medicina i pretenem aportar un valor afegit, atenció i un sentit a la medicina privada que cada cop és més global i menys personalitzada.</p>
+              <p>CMS té més de 30 anys d’experiència dedicats exclusivament a l’assistència sanitària privada. Això ens permet assolir l’objectiu d’aquest projecte, atendre de forma integral als nostres pacients amb excel·lents professionals i especialistes.</p>
+              <p>La nostra filosofia no és només cobrir totes les especialitats mèdiques sinó donar-li un sentit de treball en equip, integració multidisciplinar i atenció que permeti tenir un control absolut sobre la salut i el benestar dels nostres pacients. Poder atendre, acompanyar dones i homes en totes les etapes de la seva vida desde la infantesa, l’adolescència, la edat adulta fins a la vellesa és en si un motiu de responsabilitat que ens enorgulleix. Aquest és el sentit de CMS, el tractament i benestar dels nostres pacients.</p>
             </div>
           </div>
           <!-- END first row (Qui som?) -->
-          <div class="row row-el-centre" id="entrada-exterior">
-            <div class="col-lg-6 col-md-12">
-              <div class="row">
-                <div class="col title">
-                  ENTRADA PRINCIPAL
-                </div>
-              </div>
-              <div class="row">
-                <div class="col text text-justify p-4">
-                  <p>El centre està situat en ple centre de Sabadell, al carrer Pare Sallarés 2C. Edifici remodelat on continuament estem afegint noves especialitats per diagnosticar i tractar qualsevol pacient.</p>
-                </div>
-              </div>
+          <div class="section-grid my-250">
+            <div class="section-title">
+              ENTRADA PRINCIPAL
             </div>
-            <div class="col img-hover-zoom-container">
-              <div id="entradaPrincipal"></div>
+            <div class="section-image img-hover-zoom-container">
+              <div class="entrada-principal"></div>
+            </div>
+            <div class="section-text">
+              <p>El centre està situat en ple centre de Sabadell, al carrer Pare Sallarés 2C. Edifici remodelat on continuament estem afegint noves especialitats per diagnosticar i tractar qualsevol pacient.</p>
             </div>
           </div>
           <!-- END second row (Entrada principal) -->
@@ -132,22 +120,16 @@
             </div>
           </div>
         </div>
-        <div class="container my-250">
-          <div class="row row-el-centre mb-4">
-            <div class="col-lg-6 col-md-12 my-auto">
-              <div class="row">
-                <div class="col title">
-                  EL CENTRE PER DINS
-                </div>
-              </div>
-              <div class="row">
-                <div class="col text text-justify p-4">
-                  <p>El local ofereix àmplies i còmodes sales i zones d'espera amb abundant llum, passadissos amples i vidres pels quals entra llum natural, oferint una sensació d'espai i comoditat ideal. El centre compta, a més, amb accessos adaptats per a persones amb mobilitat reduïda.</p>
-                </div>
-              </div>
+        <div class="container">
+          <div class="section-grid my-250">
+            <div class="section-title">
+              EL CENTRE PER DINS
             </div>
-            <div class="col img-hover-zoom-container">
-              <div id="centreInterior"></div>
+            <div class="section-text">
+              <p>El local ofereix àmplies i còmodes sales i zones d'espera amb abundant llum, passadissos amples i vidres pels quals entra llum natural, oferint una sensació d'espai i comoditat ideal. El centre compta, a més, amb accessos adaptats per a persones amb mobilitat reduïda.</p>
+            </div>
+            <div class="section-image img-hover-zoom-container">
+              <div class="centre-interior"></div>
             </div>
           </div>
         </div>
