--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
             <i class="fa fa-bars"></i>
           </button>
           <div class="collapse navbar-collapse width-70 bg-cms text-left stripe" id="main-nav-responsive">
-            <ul class="navbar-nav ml-auto mr-md-0 mr-lg-4 mt-lg-4">
-              <li class="hli">
+            <ul class="navbar-nav ml-auto mr-md-0 mr-lg-4 mt-lg-4 main-nav-ul">
+              <li class="main-nav-li">
                 <a href="el-centre.html" class="mr-1">El centre</a>
               </li>
-              <li class="hli">
+              <li class="main-nav-li">
                 <a href="#" class="mr-1">Filosofia</a>
               </li>
-              <li class="hli">
+              <li class="main-nav-li">
                 <a href="#" class="mr-1">Noticies</a>
               </li>
-              <li class="hli">
+              <li class="main-nav-li">
                 <a href="https://centremedicsabadell.net/centremedic" class="mr-1">Area de Gestió</a>
               </li>
             </ul>
