--- a/el-centre.html
+++ b/el-centre.html
@@ -1,52 +1,52 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
   <link rel="shortcut icon" type="image/ico" href="images/favicon.ico">
-  <title>Centre Mèdic Sabadell</title>
   <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <script defer="defer" src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Cabin:700|Lora:400,400i,700" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
+  <title>Centre Mèdic Sabadell</title>
 </head>
 
 <body id="page-top">
   <div class="page-container">
     <div class="content-wrapper">
-      <nav class="navbar navbar-expand-lg navbar-dark shadow main-nav">
-        <div class="nav container-fluid ml-0 mr-0 pr-0">
-          <a href="index.html" class="home-link"></a>
-          <button class="navbar-toggler navbar-toggler-right bg-cms mr-3" type="button" data-toggle="collapse" data-target="#main-nav-responsive" aria-controls="navbarResponse" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="fa fa-bars"></i>
-          </button>
-          <div class="collapse navbar-collapse width-70 bg-cms text-left stripe" id="main-nav-responsive">
-            <ul class="navbar-nav ml-auto mr-md-auto mr-lg-4 mt-lg-4 main-nav-ul">
-              <li class="main-nav-li">
-                <a href="el-centre.html" class="mr-1">El centre</a>
-              </li>
-              <li class="main-nav-li">
-                <a href="#" class="mr-1">Filosofia</a>
-              </li>
-              <li class="main-nav-li">
-                <a href="#" class="mr-1">Noticies</a>
-              </li>
-              <li class="main-nav-li">
-                <a href="https://centremedicsabadell.net/centremedic" class="mr-1">Area de Gestió</a>
-              </li>
-            </ul>
-          </div>
-          <!-- END main-nav-responsive -->
-          <div class="pr-0 mt-0 width-15 text-left d-none d-lg-block bg-cms-light make-appointment">
-            <p>
-              <span class="text-muted">Sol·licitar visita:</span><br />
-              <strong>93 726 55 00</strong>
-            </p>
-          </div>
-          <!-- END solicitarVisita -->
+      <nav class=" nav container-fluid ml-0 mr-0 pr-0 navbar navbar-expand-lg navbar-dark shadow main-nav">
+        <a href="index.html" class="home-link"></a>
+        <button class="navbar-toggler navbar-toggler-right bg-cms mr-3" type="button" data-toggle="collapse" data-target="#main-nav-responsive" aria-controls="navbarResponse" aria-expanded="false" aria-label="Toggle navigation">
+          <i class="fa fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse width-70 bg-cms text-left stripe" id="main-nav-responsive">
+          <ul class="navbar-nav ml-auto mr-md-auto mr-lg-4 mt-lg-4 main-nav-ul">
+            <li class="main-nav-li">
+              <a href="el-centre.html" class="mr-1">El centre</a>
+            </li>
+            <li class="main-nav-li">
+              <a href="#" class="mr-1">Filosofia</a>
+            </li>
+            <li class="main-nav-li">
+              <a href="#" class="mr-1">Noticies</a>
+            </li>
+            <li class="main-nav-li">
+              <a href="https://centremedicsabadell.net/centremedic" class="mr-1">Area de Gestió</a>
+            </li>
+          </ul>
         </div>
+        <!-- END main-nav-responsive -->
+        <div class="pr-0 mt-0 width-15 text-left d-none d-lg-block bg-cms-light make-appointment">
+          <p>
+            <span class="text-muted">Sol·licitar visita:</span><br />
+            <strong>93 726 55 00</strong>
+          </p>
+        </div>
+        <!-- END solicitarVisita -->
         <!-- END container-fluid -->
       </nav>
       <!-- END mainNav -->
@@ -88,7 +88,7 @@
       <div class="collapse" data-is-loaded="false" id="especialitats"></div>
       <div class="p-3" id="body-container">
         <div class="container">
-          <div class="my-250">
+          <div class="big-margin-y">
             <div class="section-title">
               QUI SOM?
             </div>
@@ -99,7 +99,7 @@
             </div>
           </div>
           <!-- END first row (Qui som?) -->
-          <div class="section-grid my-250">
+          <div class="section-grid big-margin-y">
             <div class="section-title">
               ENTRADA PRINCIPAL
             </div>
@@ -113,15 +113,11 @@
           <!-- END second row (Entrada principal) -->
         </div>
         <!-- END first container -->
-        <div class="no-gutters">
-          <div class="row row-el-centre">
-            <div class="col img-hover-zoom-container">
-              <div id="exterior"></div>
-            </div>
-          </div>
+        <div class="img-hover-zoom-container">
+          <div class="exterior"></div>
         </div>
         <div class="container">
-          <div class="section-grid my-250">
+          <div class="section-grid big-margin-y">
             <div class="section-title">
               EL CENTRE PER DINS
             </div>
@@ -165,7 +161,8 @@
           document.write(new Date().getFullYear())
 
         </script>
-        Servamed, Ricard Mallafré</div>
+        Servamed
+      </div>
     </footer>
   </div>
   <script src="js/jquery.min.js"></script>
