--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -121,31 +122,18 @@
       </div>
     </div>
     <footer class="bg-cms">
-      <div class="container-fluid bg-cms m-0 p-0">
-        <div class="row">
-          <div class="col-lg col-md-6">First column</div>
-          <div class="col-lg col-md-6">Second column</div>
-          <div class="col-lg col-md-6">
-            <img class="bg-light br-5 p-2" src="images/logo-menu.png" alt="Logo CMS"></img>
-          </div>
-          <div class="col-lg col-md-6">
-            <p class="text-left-align" id="contacte">
-              <h4 class="text">Informació de Contacte:</h4>
-              <a class="color-white" href="https://goo.gl/maps/K65LNsJTPHKqen846">
-                  <div>
-                    Carrer de Parre Sallarès, 8
-                    <br>
-                    08201, Sabadell
-                  </div>
-                </a>
-              <br>
-              <p>93 726 55 00</p>
-            </p>
-          </div>
+      <div class="footer-flex">
+        <div class="footer-flex-item">
+          <img class="bg-light br-5 p-2" src="images/logo-menu.png" alt="Logo CMS"></img>
+        </div>
+        <div class="footer-flex-item" id="contacte">
+          <h4 class="text">Informació de Contacte:</h4>
+          <a class="color-white" href="https://goo.gl/maps/K65LNsJTPHKqen846"> Carrer de Parre Sallarès, 8 <br> 08201, Sabadell </a>
+          <p>93 726 55 00</p>
         </div>
       </div>
       <!-- <ul> <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li> <li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li> <li><a href="#" target="_blank"><i class="fab fa-youtube"></i></a></li> <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li> </ul> -->
-      <div class="bg-cms py-2">&copy;
+      <div class="bg-cms copyright">&copy;
         <script type="text/javascript">
           document.write(new Date().getFullYear());
 
