--- a/el-centre.html
+++ b/el-centre.html
@@ -17,7 +17,7 @@
 
 <body id="page-top">
   <div class="page-container">
-    <div class="content-wrapper">
+    <div class="container-fluid content-wrapper m-0 px-0">
       <nav class=" nav container-fluid ml-0 mr-0 pr-0 navbar navbar-expand-lg navbar-dark shadow main-nav">
         <a href="index.html" class="home-link"></a>
         <button class="navbar-toggler navbar-toggler-right bg-cms mr-3" type="button" data-toggle="collapse" data-target="#main-nav-responsive" aria-controls="navbarResponse" aria-expanded="false" aria-label="Toggle navigation">
