--- a/el-centre.html
+++ b/el-centre.html
@@ -86,47 +86,43 @@
         </div>
       </nav>
       <div class="collapse" data-is-loaded="false" id="especialitats"></div>
-      <div class="p-3" id="body-container">
-        <div class="container">
-          <div class="big-margin-y">
-            <div class="section-title">
-              QUI SOM?
-            </div>
-            <div class="section-text">
-              <p>CMS es una clínica d’especialitats mèdiques ubicada al Cor de la Ciutat de Sabadell. CMS està dirigit per personal de Sabadell i de la seva àrea d’influència. La nostra vocació és la medicina i pretenem aportar un valor afegit, atenció i un sentit a la medicina privada que cada cop és més global i menys personalitzada.</p>
-              <p>CMS té més de 30 anys d’experiència dedicats exclusivament a l’assistència sanitària privada. Això ens permet assolir l’objectiu d’aquest projecte, atendre de forma integral als nostres pacients amb excel·lents professionals i especialistes.</p>
-              <p>La nostra filosofia no és només cobrir totes les especialitats mèdiques sinó donar-li un sentit de treball en equip, integració multidisciplinar i atenció que permeti tenir un control absolut sobre la salut i el benestar dels nostres pacients. Poder atendre, acompanyar dones i homes en totes les etapes de la seva vida desde la infantesa, l’adolescència, la edat adulta fins a la vellesa és en si un motiu de responsabilitat que ens enorgulleix. Aquest és el sentit de CMS, el tractament i benestar dels nostres pacients.</p>
-            </div>
+      <div class="p-0" id="body-container">
+        <div class="big-margin-y big-margin-x">
+          <div class="section-title">
+            QUI SOM?
           </div>
-          <!-- END first row (Qui som?) -->
-          <div class="section-grid big-margin-y">
-            <div class="section-title">
-              ENTRADA PRINCIPAL
-            </div>
-            <div class="section-image img-hover-zoom-container">
-              <div class="entrada-principal"></div>
-            </div>
-            <div class="section-text">
-              <p>El centre està situat en ple centre de Sabadell, al carrer Pare Sallarés 2C. Edifici remodelat on continuament estem afegint noves especialitats per diagnosticar i tractar qualsevol pacient.</p>
-            </div>
+          <div class="section-text">
+            <p>CMS es una clínica d’especialitats mèdiques ubicada al Cor de la Ciutat de Sabadell. CMS està dirigit per personal de Sabadell i de la seva àrea d’influència. La nostra vocació és la medicina i pretenem aportar un valor afegit, atenció i un sentit a la medicina privada que cada cop és més global i menys personalitzada.</p>
+            <p>CMS té més de 30 anys d’experiència dedicats exclusivament a l’assistència sanitària privada. Això ens permet assolir l’objectiu d’aquest projecte, atendre de forma integral als nostres pacients amb excel·lents professionals i especialistes.</p>
+            <p>La nostra filosofia no és només cobrir totes les especialitats mèdiques sinó donar-li un sentit de treball en equip, integració multidisciplinar i atenció que permeti tenir un control absolut sobre la salut i el benestar dels nostres pacients. Poder atendre, acompanyar dones i homes en totes les etapes de la seva vida desde la infantesa, l’adolescència, la edat adulta fins a la vellesa és en si un motiu de responsabilitat que ens enorgulleix. Aquest és el sentit de CMS, el tractament i benestar dels nostres pacients.</p>
           </div>
-          <!-- END second row (Entrada principal) -->
         </div>
+        <!-- END first row (Qui som?) -->
+        <div class="section-grid big-margin-y big-margin-x">
+          <div class="section-title">
+            ENTRADA PRINCIPAL
+          </div>
+          <div class="section-image img-hover-zoom-container">
+            <div class="entrada-principal"></div>
+          </div>
+          <div class="section-text">
+            <p>El centre està situat en ple centre de Sabadell, al carrer Pare Sallarés 2C. Edifici remodelat on continuament estem afegint noves especialitats per diagnosticar i tractar qualsevol pacient.</p>
+          </div>
+        </div>
+        <!-- END second row (Entrada principal) -->
         <!-- END first container -->
         <div class="img-hover-zoom-container">
           <div class="exterior"></div>
         </div>
-        <div class="container">
-          <div class="section-grid big-margin-y">
-            <div class="section-title">
-              EL CENTRE PER DINS
-            </div>
-            <div class="section-text">
-              <p>El local ofereix àmplies i còmodes sales i zones d'espera amb abundant llum, passadissos amples i vidres pels quals entra llum natural, oferint una sensació d'espai i comoditat ideal. El centre compta, a més, amb accessos adaptats per a persones amb mobilitat reduïda.</p>
-            </div>
-            <div class="section-image img-hover-zoom-container">
-              <div class="centre-interior"></div>
-            </div>
+        <div class="section-grid big-margin-y big-margin-x">
+          <div class="section-title">
+            EL CENTRE PER DINS
+          </div>
+          <div class="section-text">
+            <p>El local ofereix àmplies i còmodes sales i zones d'espera amb abundant llum, passadissos amples i vidres pels quals entra llum natural, oferint una sensació d'espai i comoditat ideal. El centre compta, a més, amb accessos adaptats per a persones amb mobilitat reduïda.</p>
+          </div>
+          <div class="section-image img-hover-zoom-container">
+            <div class="centre-interior"></div>
           </div>
         </div>
       </div>
@@ -134,10 +130,10 @@
     <footer class="bg-cms">
       <div class="footer-flex">
         <div class="footer-flex-item">
-          <img class="bg-light br-5 p-2" src="images/logo-menu.png" alt="Logo CMS"></img>
+          <img class="bg-light br-5 p-1" src="images/logo-menu.png" alt="Logo CMS"></img>
         </div>
         <div class="footer-flex-item" id="contacte">
-          <h4 class="text">Informació de Contacte:</h4>
+          <h4 class="text">Contacte:</h4>
           <a class="color-white" href="https://goo.gl/maps/K65LNsJTPHKqen846"> Carrer de Parre Sallarès, 8 <br> 08201, Sabadell </a>
           <p>93 726 55 00</p>
         </div>
@@ -146,6 +142,7 @@
       <div class="bg-cms copyright">&copy;
         <script type="text/javascript">
           document.write(new Date().getFullYear());
+
         </script>
         Servamed
       </div>
