Updated styles and simplified HTML code

--- a/el-centre.html
+++ b/el-centre.html
@@ -1,158 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
-  <link rel="shortcut icon" type="image/ico" href="images/favicon.ico">
-  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <script defer="defer" src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat|Cabin:700|Lora:400,400i,700" rel="stylesheet">
-  <link href="style.css" rel="stylesheet">
-  <title>Centre Mèdic Sabadell</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+    <link rel="shortcut icon" type="image/ico" href="images/favicon.ico">
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <script defer="defer" src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Cabin:700|Lora:400,400i,700" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <title>Centre Mèdic Sabadell</title>
+  </head>
 
-<body id="page-top">
-  <div class="page-container">
-    <div class="container-fluid content-wrapper m-0 px-0">
-      <nav class=" nav container-fluid ml-0 mr-0 pr-0 navbar navbar-expand-lg navbar-dark shadow main-nav">
-        <a href="index.html" class="home-link"></a>
-        <button class="navbar-toggler navbar-toggler-right bg-cms mr-3" type="button" data-toggle="collapse" data-target="#main-nav-responsive" aria-controls="navbarResponse" aria-expanded="false" aria-label="Toggle navigation">
-          <i class="fa fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse width-70 bg-cms text-left stripe" id="main-nav-responsive">
-          <ul class="navbar-nav ml-auto mr-md-auto mr-lg-4 mt-lg-4 main-nav-ul">
-            <li class="main-nav-li">
-              <a href="el-centre.html" class="mr-1">El centre</a>
-            </li>
-            <li class="main-nav-li">
-              <a href="#" class="mr-1">Filosofia</a>
-            </li>
-            <li class="main-nav-li">
-              <a href="#" class="mr-1">Noticies</a>
-            </li>
-            <li class="main-nav-li">
-              <a href="https://centremedicsabadell.net/centremedic" class="mr-1">Area de Gestió</a>
-            </li>
-          </ul>
-        </div>
-        <!-- END main-nav-responsive -->
-        <div class="pr-0 mt-0 width-15 text-left d-none d-lg-block bg-cms-light make-appointment">
-          <p>
-            <span class="text-muted">Sol·licitar visita:</span><br />
-            <strong>93 726 55 00</strong>
-          </p>
-        </div>
-        <!-- END solicitarVisita -->
-        <!-- END container-fluid -->
-      </nav>
-      <!-- END mainNav -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light m-0 p-lg-0 py-md-1">
-        <button class="text-cms-light bg-cms ml-2 my-1 navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-supported-content" aria-controls="navbar-supported-content" aria-expanded="false" aria-label="Toggle navigation">
-          <i class="fa fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse my-1 navbar-supported-content" id="navbar-supported-content">
-          <div class="nav-item p-2 text-cms-light active" data-toggle="collapse" data-target="#especialitats" onclick="requestEspecialitats();">
-            <i class="fas fa-stethoscope fa-2x"></i><br />
-            <p class="m-0">Especialitats</p>
+  <body id="page-top">
+    <div class="page-container">
+      <div class="container-fluid content-wrapper m-0 px-0">
+        <nav class=" nav container-fluid ml-0 mr-0 pr-0 navbar navbar-expand-lg navbar-dark shadow main-nav">
+          <a href="index.html" class="home-link"></a>
+          <button class="navbar-toggler navbar-toggler-right bg-cms mr-3" type="button" data-toggle="collapse" data-target="#main-nav-responsive" aria-controls="navbarResponse" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fa fa-bars"></i>
+          </button>
+          <div class="collapse navbar-collapse width-70 bg-cms text-left stripe" id="main-nav-responsive">
+            <ul class="navbar-nav ml-auto mr-md-auto mr-lg-4 mt-lg-4 main-nav-ul">
+              <li class="main-nav-li">
+                <a href="el-centre.html" class="mr-1">El centre</a>
+              </li>
+              <li class="main-nav-li">
+                <a href="#" class="mr-1">Filosofia</a>
+              </li>
+              <li class="main-nav-li">
+                <a href="#" class="mr-1">Noticies</a>
+              </li>
+              <li class="main-nav-li">
+                <a href="https://centremedicsabadell.net/centremedic" class="mr-1">Area de Gestió</a>
+              </li>
+            </ul>
           </div>
-          <div class="nav-item p-2 text-cms-light">
-            <i class="fas fa-user-nurse fa-2x"></i><br />
-            <p class="m-0">Quadre mèdic</p>
+          <!-- END main-nav-responsive -->
+          <div class="pr-0 mt-0 width-15 text-left d-none d-lg-block bg-cms-light make-appointment">
+            <p>
+              <span class="text-muted">Sol·licitar visita:</span><br/>
+              <strong>93 726 55 00</strong>
+            </p>
           </div>
-          <div class="nav-item p-2 text-cms-light">
-            <i class="far fa-building fa-2x"></i><br />
-            <p class="m-0">Mútues</p>
-          </div>
-          <div class="nav-item p-2 text-cms-light">
-            <i class="fas fa-adjust fa-2x"></i><br />
-            <p class="m-0">Unitat estètica</p>
-          </div>
-          <div class="nav-item p-2 text-cms-light">
-            <a href="http://www.centremedicsabadell.net/" class="text-cms-light">
+          <!-- END solicitarVisita -->
+          <!-- END container-fluid -->
+        </nav>
+        <!-- END mainNav -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light m-0 p-lg-0 py-md-1">
+          <button class="text-cms-light bg-cms ml-2 my-1 navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-supported-content" aria-controls="navbar-supported-content" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fa fa-bars"></i>
+          </button>
+          <div class="collapse navbar-collapse my-1 navbar-supported-content" id="navbar-supported-content">
+            <div class="nav-item p-2 text-cms-light active" data-toggle="collapse" data-target="#especialitats" onclick="requestEspecialitats();">
+              <i class="fas fa-stethoscope fa-2x"></i><br/>
+              <p class="m-0">Especialitats</p>
+            </div>
+            <div class="nav-item p-2 text-cms-light">
+              <i class="fas fa-user-nurse fa-2x"></i><br/>
+              <p class="m-0">Quadre mèdic</p>
+            </div>
+            <div class="nav-item p-2 text-cms-light">
+              <i class="far fa-building fa-2x"></i><br/>
+              <p class="m-0">Mútues</p>
+            </div>
+            <div class="nav-item p-2 text-cms-light">
+              <i class="fas fa-adjust fa-2x"></i><br/>
+              <p class="m-0">Unitat estètica</p>
+            </div>
+            <div class="nav-item p-2 text-cms-light">
+              <a href="http://www.centremedicsabadell.net/" class="text-cms-light">
                 <i class="far fa-clipboard fa-2x"></i><br/>
                 <p class="m-0">Sol·licitar visita</p>
               </a>
-          </div>
-          <div class="nav-item p-2 text-cms-light">
-            <a href="#contacte" class="text-cms-light">
+            </div>
+            <div class="nav-item p-2 text-cms-light">
+              <a href="#contacte" class="text-cms-light">
                 <i class="fas fa-phone fa-2x"></i><br/>
                 <p class="m-0">Contacte</p>
               </a>
+            </div>
           </div>
-        </div>
-      </nav>
-      <div class="collapse" data-is-loaded="false" id="especialitats"></div>
-      <div class="p-0" id="body-container">
-        <div class="big-margin-y big-margin-x">
-          <div class="section-title">
-            QUI SOM?
+        </nav>
+        <div class="collapse" data-is-loaded="false" id="especialitats"></div>
+        <div class="p-0" id="body-container">
+          <div class="big-margin-y big-margin-x">
+            <div class="section-title">
+              QUI SOM?
+            </div>
+            <div class="section-text">
+              <p>CMS es una clínica d’especialitats mèdiques ubicada al Cor de la Ciutat de Sabadell. CMS està dirigit per personal de Sabadell i de la seva àrea d’influència. La nostra vocació és la medicina i pretenem aportar un valor afegit, atenció i un sentit a la medicina privada que cada cop és més global i menys personalitzada.</p>
+              <p>CMS té més de 30 anys d’experiència dedicats exclusivament a l’assistència sanitària privada. Això ens permet assolir l’objectiu d’aquest projecte, atendre de forma integral als nostres pacients amb excel·lents professionals i especialistes.</p>
+              <p>La nostra filosofia no és només cobrir totes les especialitats mèdiques sinó donar-li un sentit de treball en equip, integració multidisciplinar i atenció que permeti tenir un control absolut sobre la salut i el benestar dels nostres pacients. Poder atendre, acompanyar dones i homes en totes les etapes de la seva vida desde la infantesa, l’adolescència, la edat adulta fins a la vellesa és en si un motiu de responsabilitat que ens enorgulleix. Aquest és el sentit de CMS, el tractament i benestar dels nostres pacients.</p>
+            </div>
           </div>
-          <div class="section-text">
-            <p>CMS es una clínica d’especialitats mèdiques ubicada al Cor de la Ciutat de Sabadell. CMS està dirigit per personal de Sabadell i de la seva àrea d’influència. La nostra vocació és la medicina i pretenem aportar un valor afegit, atenció i un sentit a la medicina privada que cada cop és més global i menys personalitzada.</p>
-            <p>CMS té més de 30 anys d’experiència dedicats exclusivament a l’assistència sanitària privada. Això ens permet assolir l’objectiu d’aquest projecte, atendre de forma integral als nostres pacients amb excel·lents professionals i especialistes.</p>
-            <p>La nostra filosofia no és només cobrir totes les especialitats mèdiques sinó donar-li un sentit de treball en equip, integració multidisciplinar i atenció que permeti tenir un control absolut sobre la salut i el benestar dels nostres pacients. Poder atendre, acompanyar dones i homes en totes les etapes de la seva vida desde la infantesa, l’adolescència, la edat adulta fins a la vellesa és en si un motiu de responsabilitat que ens enorgulleix. Aquest és el sentit de CMS, el tractament i benestar dels nostres pacients.</p>
+          <!-- END first row (Qui som?) -->
+          <div class="section-grid big-margin-y big-margin-x">
+            <div class="section-title">
+              ENTRADA PRINCIPAL
+            </div>
+            <div class="section-image img-hover-zoom-container">
+              <div class="entrada-principal"></div>
+            </div>
+            <div class="section-text">
+              <p>El centre està situat en ple centre de Sabadell, al carrer Pare Sallarés 2C. Edifici remodelat on continuament estem afegint noves especialitats per diagnosticar i tractar qualsevol pacient.</p>
+            </div>
           </div>
-        </div>
-        <!-- END first row (Qui som?) -->
-        <div class="section-grid big-margin-y big-margin-x">
-          <div class="section-title">
-            ENTRADA PRINCIPAL
+          <!-- END second row (Entrada principal) -->
+          <!-- END first container -->
+          <div class="img-hover-zoom-container">
+            <div class="exterior"></div>
           </div>
-          <div class="section-image img-hover-zoom-container">
-            <div class="entrada-principal"></div>
-          </div>
-          <div class="section-text">
-            <p>El centre està situat en ple centre de Sabadell, al carrer Pare Sallarés 2C. Edifici remodelat on continuament estem afegint noves especialitats per diagnosticar i tractar qualsevol pacient.</p>
-          </div>
-        </div>
-        <!-- END second row (Entrada principal) -->
-        <!-- END first container -->
-        <div class="img-hover-zoom-container">
-          <div class="exterior"></div>
-        </div>
-        <div class="section-grid big-margin-y big-margin-x">
-          <div class="section-title">
-            EL CENTRE PER DINS
-          </div>
-          <div class="section-text">
-            <p>El local ofereix àmplies i còmodes sales i zones d'espera amb abundant llum, passadissos amples i vidres pels quals entra llum natural, oferint una sensació d'espai i comoditat ideal. El centre compta, a més, amb accessos adaptats per a persones amb mobilitat reduïda.</p>
-          </div>
-          <div class="section-image img-hover-zoom-container">
-            <div class="centre-interior"></div>
+          <div class="section-grid big-margin-y big-margin-x">
+            <div class="section-title">
+              EL CENTRE PER DINS
+            </div>
+            <div class="section-text">
+              <p>El local ofereix àmplies i còmodes sales i zones d'espera amb abundant llum, passadissos amples i vidres pels quals entra llum natural, oferint una sensació d'espai i comoditat ideal. El centre compta, a més, amb accessos adaptats per a persones amb mobilitat reduïda.</p>
+            </div>
+            <div class="section-image img-hover-zoom-container">
+              <div class="centre-interior"></div>
+            </div>
           </div>
         </div>
       </div>
+      <footer class="bg-cms">
+        <div class="footer-flex">
+          <div class="footer-flex-item">
+            <img class="bg-light br-5 p-1" src="images/logo-menu.png" alt="Logo CMS"></img>
+          </div>
+          <div class="footer-flex-item" id="contacte">
+            <h4 class="text">Contacte:</h4>
+            <a class="color-white" href="https://goo.gl/maps/K65LNsJTPHKqen846">
+              Carrer de Parre Sallarès, 8
+              <br>
+              08201, Sabadell
+            </a>
+            <p>93 726 55 00</p>
+          </div>
+        </div>
+        <!-- <ul> <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li> <li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li> <li><a href="#" target="_blank"><i class="fab fa-youtube"></i></a></li> <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li> </ul> -->
+        <div class="bg-cms copyright">&copy;
+          <script type="text/javascript">
+            document.write(new Date().getFullYear());
+          </script>
+          Servamed
+        </div>
+      </footer>
     </div>
-    <footer class="bg-cms">
-      <div class="footer-flex">
-        <div class="footer-flex-item">
-          <img class="bg-light br-5 p-1" src="images/logo-menu.png" alt="Logo CMS"></img>
-        </div>
-        <div class="footer-flex-item" id="contacte">
-          <h4 class="text">Contacte:</h4>
-          <a class="color-white" href="https://goo.gl/maps/K65LNsJTPHKqen846"> Carrer de Parre Sallarès, 8 <br> 08201, Sabadell </a>
-          <p>93 726 55 00</p>
-        </div>
-      </div>
-      <!-- <ul> <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li> <li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li> <li><a href="#" target="_blank"><i class="fab fa-youtube"></i></a></li> <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li> </ul> -->
-      <div class="bg-cms copyright">&copy;
-        <script type="text/javascript">
-          document.write(new Date().getFullYear());
-
-        </script>
-        Servamed
-      </div>
-    </footer>
-  </div>
-  <script src="js/jquery.min.js"></script>
-  <script src="js/jquery.easing.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <script src="index.js"></script>
-</body>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
+  </body>
 
 </html>
